# Red-GitHubBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Procfile  README.md  app.json  compose.yaml  fly.toml  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yaml
.github/workflows/: deploy.yaml  fly.yaml  lint.yaml  run_precommit.yaml
infrastructure/playbooks/: provision.yaml
infrastructure/playbooks/roles/common/tasks/: main.yaml
infrastructure/playbooks/roles/postgresql/tasks/: main.yaml
red_githubbot/: __init__.py  __main__.py  constants.py  discord_webhook.py  tasks.py  utils.py  web.py
red_githubbot/issue_parser/: __init__.py  _parser.py  _regexes.py  actions.py  wrappers.py
red_githubbot/routers/: __init__.py  auto_apply_changelog_entry_pending.py  auto_delete_pr_branch.py  backport_pr.py  blocked_commit_authors_check.py  blocked_labels_check.py  fix_committed_and_released.py  keep_up_to_date_application_ids.py  maintenance_branch_actions.py
