[build-system]
requires = ["setuptools>=80", "setuptools-scm>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Red-GitHubBot"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "apscheduler[sqlalchemy]>=3.11.2",
    "cachetools>=7.0.5",
    "cherry-picker",
    "discord.py>=2.7.1",
    "gidgethub>=5.4.0",
    "graphql-builder==1.0.0a3",
    "mistune>=2.0.0rc1",
    "psycopg2>=2.9.11",
    "regex>=2026.2.28",
    "sentry-sdk[pure-eval]>=2.55.0",
    "yarl>=1.23.0",
]
dynamic = ["version"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "black~=23.7.0",
    "flake8~=6.1.0",
    "isort~=5.12.0",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]

[tool.uv.sources]
cherry-picker = { url = "https://github.com/Jackenmen/cherry-picker/archive/109a2f96cca76631387b594111715b329c6f34e9.zip" }

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
